<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.SearchGroupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Busquedagrupo"
            android:textColor="#3F51B5"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameSearch"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/nombregrupo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/professorSearch"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/nombregrupoprofesor"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordSearch"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/passwordgrupo"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="40dp"
            android:text="@string/BuscarGrupo" />

    </LinearLayout>

</LinearLayout>