<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.NewGroupFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/FraseGrupo"
            android:textColor="#3F51B5"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameGroupF"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/nombregrupo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordGroupF"
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/passwordgrupo"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/botonGroup"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="60dp"
            android:text="@string/crear" />
    </LinearLayout>
</LinearLayout>